Chanches is good

--- a/portfolio.html
+++ b/portfolio.html
@@ -41,59 +41,68 @@
             <li><button type="button" class="button-secondary">Маркетинг</button></li>
          </ul>
          <ul>
-            <li>
-               <img src="./img/Three-people.jpg" alt="Три людини" width="370">
-               <h2 class="caption-title">Технокряк</h2>
-               <p class="caption-subtitle">Веб-сайт</p>
+            <li><a href="" class="caption-link ">
+                  <img src="./img/Three-people.jpg" alt="Три людини" width="370">
+                  <h2 class="caption-title">Технокряк</h2>
+                  <p class="caption-subtitle">Веб-сайт</p>
+               </a>
                <!--<p class="caption-text">Текст 1 для вспливаючого вікна зверху</p>-->
             </li>
-            <li>
-               <img src="./img/two-basketman.jpg" alt="Два баскетболісти" width="370">
-               <h2 class="caption-title">Постер New Orlean vs Golden Star</h2>
-               <p class="caption-subtitle">Дизайн</p>
-               <p class="caption-text">Текст 2 для вспливаючого вікна зверху</p>
+            <li><a href="" class="caption-link ">
+                  <img src="./img/two-basketman.jpg" alt="Два баскетболісти" width="370">
+                  <h2 class="caption-title">Постер New Orlean vs Golden Star</h2>
+                  <p class="caption-subtitle">Дизайн</p>
+               </a>
+               <!--<p class="caption-text">Текст 2 для вспливаючого вікна зверху</p>-->
             </li>
-            <li>
-               <img src="./img/seefood.jpg" alt="Постер морська їжа" width="370">
-               <h2 class="caption-title">Ресторан Seafood</h2>
-               <p class="caption-subtitle">Приложение</p>
-               <p class="caption-text">Текст 3 для вспливаючого вікна зверху</p>
+            <li><a href="" class="caption-link ">
+                  <img src="./img/seefood.jpg" alt="Постер морська їжа" width="370">
+                  <h2 class="caption-title">Ресторан Seafood</h2>
+                  <p class="caption-subtitle">Приложение</p>
+               </a>
+               <!--<p class="caption-text">Текст 3 для вспливаючого вікна зверху</p>-->
             </li>
-            <li>
-               <img src="./img/headphone.jpg" alt="Навушники" width="370">
-               <h2 class="caption-title">Проект Prime</h2>
-               <p class="caption-subtitle">Маркетинг</p>
-               <p class="caption-text">Текст 4 для вспливаючого вікна зверху</p>
+            <li><a href="" class="caption-link ">
+                  <img src="./img/headphone.jpg" alt="Навушники" width="370">
+                  <h2 class="caption-title">Проект Prime</h2>
+                  <p class="caption-subtitle">Маркетинг</p>
+               </a>
+               <!--<p class="caption-text">Текст 4 для вспливаючого вікна зверху</p>-->
             </li>
-            <li>
-               <img src="./img/two-box.jpg" alt="Два бокси" width="370">
-               <h2 class="caption-title">Проект Boxes</h2>
-               <p class="caption-subtitle">Приложение</p>
-               <p class="caption-text">Текст 5 для вспливаючого вікна зверху</p>
+            <li><a href="" class="caption-link ">
+                  <img src="./img/two-box.jpg" alt="Два бокси" width="370">
+                  <h2 class="caption-title">Проект Boxes</h2>
+                  <p class="caption-subtitle">Приложение</p>
+               </a>
+               <!--<p class="caption-text">Текст 5 для вспливаючого вікна зверху</p>-->
             </li>
-            <li>
-               <img src="./img/desktop.jpg" alt="Монітор компьютера" width="370">
-               <h2 class="caption-title">Inspiration has no Borders</h2>
-               <p class="caption-subtitle">Веб-сайт</p>
-               <p class="caption-text">Текст 6 для вспливаючого вікна зверху</p>
+            <li><a href="" class="caption-link ">
+                  <img src="./img/desktop.jpg" alt="Монітор компьютера" width="370">
+                  <h2 class="caption-title">Inspiration has no Borders</h2>
+                  <p class="caption-subtitle">Веб-сайт</p>
+               </a>
+               <!--<p class="caption-text">Текст 6 для вспливаючого вікна зверху</p>-->
             </li>
-            <li>
-               <img src="./img/magazine.jpg" alt="Журнал" width="370">
-               <h2 class="caption-title">Издание Limited Edition</h2>
-               <p class="caption-subtitle">Дизайн</p>
-               <p class="caption-text">Текст 7 для вспливаючого вікна зверху</p>
+            <li><a href="" class="caption-link ">
+                  <img src="./img/magazine.jpg" alt="Журнал" width="370">
+                  <h2 class="caption-title">Издание Limited Edition</h2>
+                  <p class="caption-subtitle">Дизайн</p>
+               </a>
+               <!--<p class="caption-text">Текст 7 для вспливаючого вікна зверху</p>-->
             </li>
-            <li>
-               <img src="./img/alphabet.jpg" alt="Алфавіт" width="370">
-               <h2 class="caption-title">Проект LAB</h2>
-               <p class="caption-subtitle">Маркетинг</p>
-               <p class="caption-text">Текст 8 для вспливаючого вікна зверху</p>
+            <li><a href="" class="caption-link ">
+                  <img src="./img/alphabet.jpg" alt="Алфавіт" width="370">
+                  <h2 class="caption-title">Проект LAB</h2>
+                  <p class="caption-subtitle">Маркетинг</p>
+               </a>
+               <!--<p class="caption-text">Текст 8 для вспливаючого вікна зверху</p>-->
             </li>
-            <li>
-               <img src="./img/laptop.jpg" alt="Лап топ" width="370">
-               <h2 class="caption-title">Growing Business</h2>
-               <p class="caption-subtitle">Приложение</p>
-               <p class="caption-text">Текст 9 для вспливаючого вікна зверху</p>
+            <li><a href="" class="caption-link ">
+                  <img src="./img/laptop.jpg" alt="Лап топ" width="370">
+                  <h2 class="caption-title">Growing Business</h2>
+                  <p class="caption-subtitle">Приложение</p>
+               </a>
+               <!--<p class="caption-text">Текст 9 для вспливаючого вікна зверху</p>-->
             </li>
          </ul>
       </section>
