--- a/index.html
+++ b/index.html
@@ -15,20 +15,22 @@
    <!--загальний стайл body-->
    <header class="header container">
       <div class="header-list">
-         <nav class="site-nav">
-            <a href="index.html" class="logo-header"><span style="color: var(--accent-color)">Web</span>Studio</a>
-            <ul class="style-nav">
-               <li><a href="index.html" class="link current">Студия</a></li>
-               <li><a href="portfolio.html" class="link">Портфолио</a></li>
-               <li><a href="" class="link">Контакты</a></li>
-            </ul>
-         </nav>
+         <a href="index.html" class="logo-header"><span style="color: var(--accent-color)">Web</span>Studio</a>
+
+         <ul class="style-nav">
+            <li><a href="index.html" class="link current">Студия</a></li>
+            <li><a href="portfolio.html" class="link">Портфолио</a></li>
+            <li><a href="" class="link">Контакты</a></li>
+         </ul>
+
          <ul class="info">
             <li><a href="mailto:info@devstudio.com" class="mail">info@devstudio.com</a></li>
             <li><a href="tel:+380961111111" class="tel">+38(096)111 11 11</a></li>
          </ul>
+
+      </div>
    </header>
-   </div>
+
    <main>
       <!--секція Герой-->
       <section class="hero container">
@@ -66,9 +68,9 @@
          <div class="galery-list">
             <h2 class="galery-title">Чем мы занимаемся</h2>
             <ul class="galery-title-img">
-               <li class="galery-img"><img src="./img/box1.jpg" alt="Desk top" width="370"></li>
-               <li class="galery-img"><img src="./img/box2.jpg " alt="Mobile phone" width="370"></li>
-               <li class="galery-img"><img src="./img/box3.jpg " alt="Tabl" width="370"></li>
+               <li class="galery-img"><img src="./img/box1.jpg" alt="Desk top" width="370" height="294"></li>
+               <li class="galery-img"><img src="./img/box2.jpg " alt="Mobile phone" width="370" height="294"></li>
+               <li class="galery-img"><img src="./img/box3.jpg " alt="Tabl" width="370" height="294"></li>
             </ul>
          </div>
       </section>
@@ -76,7 +78,7 @@
       <section class="team-container">
          <div class="team-list">
             <h2 class="team-title">Наша команда</h2>
-            <ul>
+            <ul class="team-title-list">
                <li class="name-list shadow-bottom"><img src="./img/card1.jpg" alt="Desk top" width="270">
                   <h3 class="team-name">Игорь Демьяненко</h3>
                   <p class="team-position">Product Designer</p>
@@ -98,7 +100,7 @@
       </section>
    </main>
    <!--секція Футер-->
-   <footer class="footer">
+   <footer class="footer container">
       <div class="footer-list">
          <h2 hidden>Address</h2>
          <a href="index.html" class="logo logo-footer"><span style="color: var(--accent-color)">Web</span>Studio</a>
