--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body class="page">
    <!--загальний стайл body-->
    <header class="header container">
-      <div class="header-list">
+      <nav class="header-list">
          <a href="index.html" class="logo-header"><span style="color: var(--accent-color)">Web</span>Studio</a>
 
          <ul class="style-nav">
@@ -28,7 +28,7 @@
             <li><a href="tel:+380961111111" class="tel">+38(096)111 11 11</a></li>
          </ul>
 
-      </div>
+      </nav>
    </header>
 
    <main>
@@ -39,64 +39,64 @@
       </section>
       <!--секція Особливості-->
       <section class="special container">
-         <div class="special-list">
-            <h2 hidden class="special-title">Особенности</h2>
-            <ul class="galery-title-list">
-               <li class="subtitle-list">
-                  <h3 class="special-subtitle">Внимание к деталям</h3>
-                  <p class="special-text">Идейные соображения, а также начало повседневной работы по формированию
-                     позиции.
-                  </p>
-               </li>
-               <li class="subtitle-list">
-                  <h3 class="special-subtitle">Пунктуальность</h3>
-                  <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
-               </li>
-               <li class="subtitle-list">
-                  <h3 class="special-subtitle">Планирование</h3>
-                  <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
-               </li>
-               <li class="subtitle-list">
-                  <h3 class="special-subtitle">Современные технологии</h3>
-                  <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
-               </li>
-            </ul>
-         </div>
+         <!--<div class="special-list">-->
+         <h2 hidden class="special-title">Особенности</h2>
+         <ul class="galery-title-list">
+            <li class="subtitle-list">
+               <h3 class="special-subtitle">Внимание к деталям</h3>
+               <p class="special-text">Идейные соображения, а также начало повседневной работы по формированию
+                  позиции.
+               </p>
+            </li>
+            <li class="subtitle-list">
+               <h3 class="special-subtitle">Пунктуальность</h3>
+               <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+            </li>
+            <li class="subtitle-list">
+               <h3 class="special-subtitle">Планирование</h3>
+               <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+            </li>
+            <li class="subtitle-list">
+               <h3 class="special-subtitle">Современные технологии</h3>
+               <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+            </li>
+         </ul>
+         <!--</div>-->
       </section>
       <!--секція Галерея-->
       <section class="galery container">
-         <div class="galery-list">
-            <h2 class="galery-title">Чем мы занимаемся</h2>
-            <ul class="galery-title-img">
-               <li class="galery-img"><img src="./img/box1.jpg" alt="Desk top" width="370" height="294"></li>
-               <li class="galery-img"><img src="./img/box2.jpg " alt="Mobile phone" width="370" height="294"></li>
-               <li class="galery-img"><img src="./img/box3.jpg " alt="Tabl" width="370" height="294"></li>
-            </ul>
-         </div>
+
+         <h2 class="galery-title">Чем мы занимаемся</h2>
+         <ul class="galery-title-img">
+            <li class="galery-img"><img src="./img/box1.jpg" alt="Desk top" width="370" height="294"></li>
+            <li class="galery-img"><img src="./img/box2.jpg " alt="Mobile phone" width="370" height="294"></li>
+            <li class="galery-img"><img src="./img/box3.jpg " alt="Tabl" width="370" height="294"></li>
+         </ul>
+
       </section>
       <!--секція Команда-->
-      <section class="team-container">
-         <div class="team-list">
-            <h2 class="team-title">Наша команда</h2>
-            <ul class="team-title-list">
-               <li class="name-list shadow-bottom"><img src="./img/card1.jpg" alt="Desk top" width="270">
-                  <h3 class="team-name">Игорь Демьяненко</h3>
-                  <p class="team-position">Product Designer</p>
-               </li>
-               <li class="name-list"><img src="./img/card2.jpg" alt="Desk top" width="270">
-                  <h3 class="team-name">Ольга Репина</h3>
-                  <p class="team-position">Frontend Developer</p>
-               </li>
-               <li class="name-list"><img src="./img/card3.jpg" alt="Desk top" width="270">
-                  <h3 class="team-name">Николай Тарасов</h3>
-                  <p class="team-position">Marketing</p>
-               </li>
-               <li class="name-list"><img src="./img/card4.jpg" alt="Desk top" width="270">
-                  <h3 class="team-name">Михаил Ермаков</h3>
-                  <p class="team-position">UI Designer</p>
-               </li>
-            </ul>
-         </div>
+      <section class="team container">
+
+         <h2 class="team-title">Наша команда</h2>
+         <ul class="team-title-list">
+            <li class="name-list shadow-bottom"><img src="./img/card1.jpg" alt="Desk top" width="270">
+               <h3 class="team-name">Игорь Демьяненко</h3>
+               <p class="team-position">Product Designer</p>
+            </li>
+            <li class="name-list"><img src="./img/card2.jpg" alt="Desk top" width="270">
+               <h3 class="team-name">Ольга Репина</h3>
+               <p class="team-position">Frontend Developer</p>
+            </li>
+            <li class="name-list"><img src="./img/card3.jpg" alt="Desk top" width="270">
+               <h3 class="team-name">Николай Тарасов</h3>
+               <p class="team-position">Marketing</p>
+            </li>
+            <li class="name-list"><img src="./img/card4.jpg" alt="Desk top" width="270">
+               <h3 class="team-name">Михаил Ермаков</h3>
+               <p class="team-position">UI Designer</p>
+            </li>
+         </ul>
+
       </section>
    </main>
    <!--секція Футер-->
