--- a/portfolio.html
+++ b/portfolio.html
@@ -17,9 +17,9 @@
       <div class="header-list">
          <a href="index.html" class="logo-header"><span style="color: var(--accent-color)">Web</span>Studio</a>
 
-         <ul class="style-nav container">
-            <li><a href="index.html" class="link current">Студия</a></li>
-            <li><a href="portfolio.html" class="link">Портфолио</a></li>
+         <ul class="style-nav">
+            <li><a href="index.html" class="link">Студия</a></li>
+            <li><a href="portfolio.html" class="link current">Портфолио</a></li>
             <li><a href="" class="link">Контакты</a></li>
          </ul>
 
@@ -31,77 +31,79 @@
       </div>
    </header>
 
-
    <!--Новий розділ стосовно сторінки 2-->
    <main>
       <section class="content container">
          <h1 hidden class="caption">Портфоліо</h1>
-         <ul>
+         <ul class="caption-list">
             <li><button type="button" class="button-secondary current-button">Все</button></li>
             <li><button type="button" class="button-secondary">Веб-сайты</button></li>
             <li><button type="button" class="button-secondary">Приложения</button></li>
             <li><button type="button" class="button-secondary">Дизайн</button></li>
             <li><button type="button" class="button-secondary">Маркетинг</button></li>
          </ul>
-         <ul>
-            <li><a href="" class="caption-link ">
-                  <img src="./img/Three-people.jpg" alt="Три людини" width="370">
+
+         <ul class="caption-card">
+
+            <li class="caption-link">
+               <a href=""><img src="./img/Three-people.jpg" alt="Три людини" width="370" width="294" class="pict">
+                  <!--<div class="caption-subcard">-->
                   <h2 class="caption-title">Технокряк</h2>
                   <p class="caption-subtitle">Веб-сайт</p>
+                  <!--</div>-->
                </a>
                <!--<p class="caption-text">Текст 1 для вспливаючого вікна зверху</p>-->
             </li>
+
             <li><a href="" class="caption-link ">
                   <img src="./img/two-basketman.jpg" alt="Два баскетболісти" width="370">
                   <h2 class="caption-title">Постер New Orlean vs Golden Star</h2>
                   <p class="caption-subtitle">Дизайн</p>
                </a>
-               <!--<p class="caption-text">Текст 2 для вспливаючого вікна зверху</p>-->
-            </li>
-            <li><a href="" class="caption-link ">
-                  <img src="./img/seefood.jpg" alt="Постер морська їжа" width="370">
+            <li class="caption-link"><a href="">
+                  <img src="./img/seefood.jpg" alt="Постер морська їжа" width="370" class="pict">
                   <h2 class="caption-title">Ресторан Seafood</h2>
                   <p class="caption-subtitle">Приложение</p>
                </a>
                <!--<p class="caption-text">Текст 3 для вспливаючого вікна зверху</p>-->
             </li>
-            <li><a href="" class="caption-link ">
-                  <img src="./img/headphone.jpg" alt="Навушники" width="370">
+            <li class="caption-link"><a href="">
+                  <img src="./img/headphone.jpg" alt="Навушники" width="370" class="pict">
                   <h2 class="caption-title">Проект Prime</h2>
                   <p class="caption-subtitle">Маркетинг</p>
                </a>
                <!--<p class="caption-text">Текст 4 для вспливаючого вікна зверху</p>-->
             </li>
-            <li><a href="" class="caption-link ">
-                  <img src="./img/two-box.jpg" alt="Два бокси" width="370">
+            <li class="caption-link"><a href="">
+                  <img src="./img/two-box.jpg" alt="Два бокси" width="370" class="pict">
                   <h2 class="caption-title">Проект Boxes</h2>
                   <p class="caption-subtitle">Приложение</p>
                </a>
                <!--<p class="caption-text">Текст 5 для вспливаючого вікна зверху</p>-->
             </li>
-            <li><a href="" class="caption-link ">
-                  <img src="./img/desktop.jpg" alt="Монітор компьютера" width="370">
+            <li class="caption-link"><a href="">
+                  <img src="./img/desktop.jpg" alt="Монітор компьютера" width="370" class="pict">
                   <h2 class="caption-title">Inspiration has no Borders</h2>
                   <p class="caption-subtitle">Веб-сайт</p>
                </a>
                <!--<p class="caption-text">Текст 6 для вспливаючого вікна зверху</p>-->
             </li>
-            <li><a href="" class="caption-link ">
-                  <img src="./img/magazine.jpg" alt="Журнал" width="370">
+            <li class="caption-link"><a href="">
+                  <img src="./img/magazine.jpg" alt="Журнал" width="370" class="pict">
                   <h2 class="caption-title">Издание Limited Edition</h2>
                   <p class="caption-subtitle">Дизайн</p>
                </a>
                <!--<p class="caption-text">Текст 7 для вспливаючого вікна зверху</p>-->
             </li>
-            <li><a href="" class="caption-link ">
-                  <img src="./img/alphabet.jpg" alt="Алфавіт" width="370">
+            <li class="caption-link"><a href="">
+                  <img src="./img/alphabet.jpg" alt="Алфавіт" width="370" class="pict">
                   <h2 class="caption-title">Проект LAB</h2>
                   <p class="caption-subtitle">Маркетинг</p>
                </a>
                <!--<p class="caption-text">Текст 8 для вспливаючого вікна зверху</p>-->
             </li>
-            <li><a href="" class="caption-link ">
-                  <img src="./img/laptop.jpg" alt="Лап топ" width="370">
+            <li class="caption-link"><a href="">
+                  <img src="./img/laptop.jpg" alt="Лап топ" width="370" class="pict">
                   <h2 class="caption-title">Growing Business</h2>
                   <p class="caption-subtitle">Приложение</p>
                </a>
