--- a/portfolio.html
+++ b/portfolio.html
@@ -13,118 +13,145 @@
 
 <body class="page">
    <!--загальний стайл body-->
-   <header class="header container">
-      <div class="header-list">
-         <a href="index.html" class="logo-header"><span style="color: var(--accent-color)">Web</span>Studio</a>
+   <header class="header">
+      <div class="container">
+         <nav class="header-list">
+            <a href="index.html" class="logo-header"><span style="color: var(--accent-color)">Web</span>Studio</a>
 
-         <ul class="style-nav">
-            <li><a href="index.html" class="link">Студия</a></li>
-            <li><a href="portfolio.html" class="link current">Портфолио</a></li>
-            <li><a href="" class="link">Контакты</a></li>
-         </ul>
+            <ul class="style-nav">
+               <li class="link"><a href="index.html">Студия</a></li>
+               <li class="link current"><a href="portfolio.html">Портфолио</a></li>
+               <li class="link"><a href="">Контакты</a></li>
+            </ul>
 
-         <ul class="info">
-            <li><a href="mailto:info@devstudio.com" class="mail">info@devstudio.com</a></li>
-            <li><a href="tel:+380961111111" class="tel">+38(096)111 11 11</a></li>
-         </ul>
-
+            <ul class="info">
+               <li class="mail"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+               <li class="tel"><a href="tel:+380961111111">+38(096)111 11 11</a></li>
+            </ul>
+         </nav>
       </div>
    </header>
 
-   <!--Новий розділ стосовно сторінки 2-->
+   <!--Новий розділ стосовно сторінки 2 ------------------------------------ -->
    <main>
-      <section class="content container">
-         <h1 hidden class="caption">Портфоліо</h1>
-         <ul class="caption-list">
-            <li><button type="button" class="button-secondary current-button">Все</button></li>
-            <li><button type="button" class="button-secondary">Веб-сайты</button></li>
-            <li><button type="button" class="button-secondary">Приложения</button></li>
-            <li><button type="button" class="button-secondary">Дизайн</button></li>
-            <li><button type="button" class="button-secondary">Маркетинг</button></li>
-         </ul>
+      <section class="content">
 
-         <ul class="caption-card">
+         <div class="container">
 
-            <li class="caption-link">
-               <a href=""><img src="./img/Three-people.jpg" alt="Три людини" width="370" width="294" class="pict">
-                  <!--<div class="caption-subcard">-->
-                  <h2 class="caption-title">Технокряк</h2>
-                  <p class="caption-subtitle">Веб-сайт</p>
-                  <!--</div>-->
-               </a>
-               <!--<p class="caption-text">Текст 1 для вспливаючого вікна зверху</p>-->
-            </li>
+            <h1 hidden class="portfolio">Портфоліо</h1>
 
-            <li><a href="" class="caption-link ">
-                  <img src="./img/two-basketman.jpg" alt="Два баскетболісти" width="370">
-                  <h2 class="caption-title">Постер New Orlean vs Golden Star</h2>
-                  <p class="caption-subtitle">Дизайн</p>
-               </a>
-            <li class="caption-link"><a href="">
-                  <img src="./img/seefood.jpg" alt="Постер морська їжа" width="370" class="pict">
-                  <h2 class="caption-title">Ресторан Seafood</h2>
-                  <p class="caption-subtitle">Приложение</p>
-               </a>
-               <!--<p class="caption-text">Текст 3 для вспливаючого вікна зверху</p>-->
-            </li>
-            <li class="caption-link"><a href="">
-                  <img src="./img/headphone.jpg" alt="Навушники" width="370" class="pict">
-                  <h2 class="caption-title">Проект Prime</h2>
-                  <p class="caption-subtitle">Маркетинг</p>
-               </a>
-               <!--<p class="caption-text">Текст 4 для вспливаючого вікна зверху</p>-->
-            </li>
-            <li class="caption-link"><a href="">
-                  <img src="./img/two-box.jpg" alt="Два бокси" width="370" class="pict">
-                  <h2 class="caption-title">Проект Boxes</h2>
-                  <p class="caption-subtitle">Приложение</p>
-               </a>
-               <!--<p class="caption-text">Текст 5 для вспливаючого вікна зверху</p>-->
-            </li>
-            <li class="caption-link"><a href="">
-                  <img src="./img/desktop.jpg" alt="Монітор компьютера" width="370" class="pict">
-                  <h2 class="caption-title">Inspiration has no Borders</h2>
-                  <p class="caption-subtitle">Веб-сайт</p>
-               </a>
-               <!--<p class="caption-text">Текст 6 для вспливаючого вікна зверху</p>-->
-            </li>
-            <li class="caption-link"><a href="">
-                  <img src="./img/magazine.jpg" alt="Журнал" width="370" class="pict">
-                  <h2 class="caption-title">Издание Limited Edition</h2>
-                  <p class="caption-subtitle">Дизайн</p>
-               </a>
-               <!--<p class="caption-text">Текст 7 для вспливаючого вікна зверху</p>-->
-            </li>
-            <li class="caption-link"><a href="">
-                  <img src="./img/alphabet.jpg" alt="Алфавіт" width="370" class="pict">
-                  <h2 class="caption-title">Проект LAB</h2>
-                  <p class="caption-subtitle">Маркетинг</p>
-               </a>
-               <!--<p class="caption-text">Текст 8 для вспливаючого вікна зверху</p>-->
-            </li>
-            <li class="caption-link"><a href="">
-                  <img src="./img/laptop.jpg" alt="Лап топ" width="370" class="pict">
-                  <h2 class="caption-title">Growing Business</h2>
-                  <p class="caption-subtitle">Приложение</p>
-               </a>
-               <!--<p class="caption-text">Текст 9 для вспливаючого вікна зверху</p>-->
-            </li>
-         </ul>
+            <div class="portfolio-btn">
+               <ul class="btn-menu">
+                  <li class="btn-list"><button type="button" class="btn-secondary current-btn-secondary">Все</button>
+                  </li>
+                  <li class="btn-list"><button type="button" class="btn-secondary">Веб-сайты</button></li>
+                  <li class="btn-list"><button type="button" class="btn-secondary">Приложения</button></li>
+                  <li class="btn-list"><button type="button" class="btn-secondary">Дизайн</button></li>
+                  <li class="btn-list"><button type="button" class="btn-secondary">Маркетинг</button></li>
+               </ul>
+            </div>
+
+            <ul class="portfolio-menu-card">
+               <div class="portfolio-menu">
+                  <li class="portfolio-card">
+                     <a href=""><img class="pict" src="./img/Three-people.jpg" alt="Три людини" width="370"
+                           height="294"></a>
+                     <div class="caption-subcard">
+                        <h2 class="portfolio-name">Технокряк</h2>
+                        <p class="portfolio-site">Веб-сайт</p>
+                     </div>
+                  </li>
+
+                  <li class="portfolio-card">
+                     <a href=""></a><img class="pict" src="./img/two-basketman.jpg" alt="Два баскетболісти" width="370"
+                        height="294"></a>
+                     <div class="caption-subcard">
+                        <h2 class="portfolio-name">Постер New Orlean vs Golden Star</h2>
+                        <p class="portfolio-site">Дизайн</p>
+                     </div>
+                  </li>
+
+                  <li class="portfolio-card">
+                     <a href=""><img class="pict" src="./img/seefood.jpg" alt="Постер морська їжа" width="370"
+                           height="294"></a>
+                     <div class="caption-subcard">
+                        <h2 class="portfolio-name">Ресторан Seafood</h2>
+                        <p class="portfolio-site">Приложение</p>
+                     </div>
+                  </li>
+
+                  <li class="portfolio-card">
+                     <a href=""><img class="pict" src="./img/headphone.jpg" alt="Навушники" width="370"
+                           height="294"></a>
+                     <div class="caption-subcard">
+                        <h2 class="portfolio-name">Проект Prime</h2>
+                        <p class="portfolio-site">Маркетинг</p>
+                     </div>
+                  </li>
+
+                  <li class="portfolio-card">
+                     <a href=""><img class="pict" src="./img/two-box.jpg" alt="Два бокси" width="370" height="294"></a>
+                     <div class="caption-subcard">
+                        <h2 class="portfolio-name">Проект Boxes</h2>
+                        <p class="portfolio-site">Приложение</p>
+                     </div>
+                  </li>
+
+                  <li class="portfolio-card">
+                     <a href=""><img class="pict" src="./img/desktop.jpg" alt="Монітор компьютера" width="370"
+                           height="294"></a>
+                     <div class="caption-subcard">
+                        <h2 class="portfolio-name">Inspiration has no Borders</h2>
+                        <p class="portfolio-site">Веб-сайт</p>
+                     </div>
+                  </li>
+
+                  <li class="portfolio-card">
+                     <a href=""><img class="pict" src="./img/magazine.jpg" alt="Журнал" width="370" height="294"></a>
+                     <div class="caption-subcard">
+                        <h2 class="portfolio-name">Издание Limited Edition</h2>
+                        <p class="portfolio-site">Дизайн</p>
+                     </div>
+                  </li>
+
+                  <li class="portfolio-card">
+                     <a href=""><img class="pict" src="./img/alphabet.jpg" alt="Алфавіт" width="370" height="294"></a>
+                     <div class="caption-subcard">
+                        <h2 class="portfolio-name">Проект LAB</h2>
+                        <p class="portfolio-site">Маркетинг</p>
+                     </div>
+                  </li>
+
+                  <li class="portfolio-card">
+                     <a href=""><img class="pict" src="./img/laptop.jpg" alt="Лап топ" width="370" height="294"></a>
+                     <div class="caption-subcard">
+                        <h2 class="portfolio-name">Growing Business</h2>
+                        <p class="portfolio-site">Приложение</p>
+                     </div>
+                  </li>
+               </div>
+            </ul>
+
+         </div>
       </section>
    </main>
+
    <!--секція Футер-->
-   <footer class="footer container">
-      <div class="footer-list">
+   <footer class="footer">
+      <div class="container">
+
          <h2 hidden>Address</h2>
-         <a href="index.html" class="logo logo-footer"><span style="color: var(--accent-color)">Web</span>Studio</a>
-         <address>
-            <ul>
-               <li><a href="addres:г.Киев,пр-тЛесиУкраинки,26" class="address">г. Киев, пр-т Леси Украинки, 26</a>
-               </li>
-               <li><a href="mailto:info@example.com" class="mail-footer">info@example.com</a></li>
-               <li><a href="tel:+380991111111" class="tel-footer">+38 099 111 11 11</a></li>
-            </ul>
-         </address>
+         <div class="footer-title">
+            <a href="index.html" class="logo-footer"><span style="color: var(--accent-color)">Web</span>Studio</a>
+            <address>
+               <ul>
+                  <li class="address"><a href="addres:г.Киев,пр-тЛесиУкраинки,26">г. Киев, пр-т Леси Украинки, 26</a>
+                  </li>
+                  <li class="mail-footer"><a href="mailto:info@example.com">info@example.com</a></li>
+                  <li class="tel-footer"><a href="tel:+380991111111">+38 099 111 11 11</a></li>
+               </ul>
+            </address>
+         </div>
       </div>
    </footer>
 </body>
