--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
       <section class="special">
 
          <div class="container">
-            <h2 hidden class="special-title">Особенности</h2>
+            <h2 class="special-title visually-hidden">
+               ">Особенности</h2>
 
             <ul class="galery-title-list">
                <li class="subtitle-list">
@@ -146,7 +147,7 @@
    <footer class="footer">
       <div class="container footer-title">
 
-         <h2 hidden>Address</h2>
+         <h2 class="visually-hidden">Address</h2>
 
          <a class="logo-footer" href="index.html"><span style="color: var(--accent-color)">Web</span>Studio</a>
          <address class="adress-title">
