--- a/portfolio.html
+++ b/portfolio.html
@@ -64,8 +64,8 @@
                </li>
 
                <li class="portfolio-card">
-                  <a href=""></a><img class="pict" src="./img/two-basketman.jpg" alt="Два баскетболісти" width="370"
-                     height="294"></a>
+                  <a href=""><img class="pict" src="./img/two-basketman.jpg" alt="Два баскетболісти" width="370"
+                        height="294"></a>
                   <div class="caption-subcard">
                      <h2 class="portfolio-name">Постер New Orlean vs Golden Star</h2>
                      <p class="portfolio-site">Дизайн</p>
