--- a/index.html
+++ b/index.html
@@ -50,8 +50,7 @@
       <section class="special">
 
          <div class="container">
-            <h2 class="special-title visually-hidden">
-               ">Особенности</h2>
+            <h2 class="special-title visually-hidden">Особенности</h2>
 
             <ul class="galery-title-list">
                <li class="subtitle-list">
