--- a/portfolio.html
+++ b/portfolio.html
@@ -140,7 +140,7 @@
    <footer class="footer">
       <div class="container footer-title">
 
-         <h2 hidden>Address</h2>
+         <h2 class="visually-hidden">Address</h2>
 
          <a class="logo-footer" href="index.html"><span style="color: var(--accent-color)">Web</span>Studio</a>
          <address class="adress-title">
